// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Caption Elements renders as <span> by default 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 0.625rem;
  line-height: 1rem;
  font-weight: 500;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.0625rem;
  -moz-letter-spacing: 0.0625rem;
  -ms-letter-spacing: 0.0625rem;
  letter-spacing: 0.0625rem;
}

<span
  className="c0"
  color="bulma.100"
>
  Caption
</span>
`;

exports[`Caption Elements renders as an element if "as" prop provided 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 0.625rem;
  line-height: 1rem;
  font-weight: 500;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.0625rem;
  -moz-letter-spacing: 0.0625rem;
  -ms-letter-spacing: 0.0625rem;
  letter-spacing: 0.0625rem;
}

<p
  className="c0"
  color="bulma.100"
>
  Caption with Paragraph tag
</p>
`;

exports[`Caption renders default color 1`] = `
.c0 {
  color: #FFFFFF;
  font-size: 0.625rem;
  line-height: 1rem;
  font-weight: 500;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.0625rem;
  -moz-letter-spacing: 0.0625rem;
  -ms-letter-spacing: 0.0625rem;
  letter-spacing: 0.0625rem;
}

<span
  className="c0"
  color="bulma.100"
>
  Caption
</span>
`;

exports[`Caption renders with a color 1`] = `
.c0 {
  color: #0CD463;
  font-size: 0.625rem;
  line-height: 1rem;
  font-weight: 500;
  text-transform: uppercase;
  -webkit-letter-spacing: 0.0625rem;
  -moz-letter-spacing: 0.0625rem;
  -ms-letter-spacing: 0.0625rem;
  letter-spacing: 0.0625rem;
}

<span
  className="c0"
  color="piccolo.100"
>
  Caption
</span>
`;
